added validation on registration, data add to localStorage after creating account, redirects to other part of app (with other shell) for now only after page reloading

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 
     <!-- Polymer imports-->
-    <script src="bower_components/webcomponentsjs/webcomponents.js"> </script>
-    <!--<link rel="import" href="bower_components/font-roboto/roboto.html">-->
+    <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
     <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
     <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
-    <link rel="import"  href="bower_components/paper-tabs/paper-tabs.html">
+    <link rel="import" href="bower_components/paper-tabs/paper-tabs.html">
     <link rel="import" href="bower_components/paper-button/paper-button.html">
     <link rel="import" href="bower_components/paper-input/paper-input-decorator.html">
     <link rel="import" href="bower_components/paper-input/paper-input.html">
     <link rel="import" href="bower_components/core-field/core-field.html">
+    <link rel="stylesheet" href="bower_components/core-icon/core-icon.html"/>
     <!-- Polymer imports ends-->
     <link rel="stylesheet" href="css/app.css"/>
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
@@ -20,6 +20,6 @@
 <body fullbleed vertical layout unresolved id="applicationHost">
 
 
-    <script src="lib/require/require.js" data-main="app/main"></script>
+<script src="lib/require/require.js" data-main="app/main"></script>
 </body>
 </html>
