changed layout, adaptive now, error handlers from server added

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     <link rel="import" href="bower_components/paper-input/paper-input-decorator.html">
     <link rel="import" href="bower_components/paper-input/paper-input.html">
     <link rel="import" href="bower_components/core-field/core-field.html">
-    <link rel="stylesheet" href="bower_components/core-icon/core-icon.html"/>
+    <link rel="import" href="bower_components/core-icon/core-icon.html"/>
+    <link rel="import" href="bower_components/core-scaffold/core-scaffold.html"/>
+    <link rel="import" href="bower_components/core-menu/core-menu.html"/>
+    <link rel="import" href="bower_components/core-item/core-item.html"/>
+
     <!-- Polymer imports ends-->
     <link rel="stylesheet" href="css/app.css"/>
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
 </head>
 <body fullbleed vertical layout unresolved id="applicationHost">
 
