Update title system rendering

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <!-- Polymer imports ends-->
     <link rel="stylesheet" href="css/app.css"/>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
 </head>
 <body fullbleed vertical layout unresolved id="applicationHost">
 
