canActivate + paper-toast

--- a/imports.html
+++ b/imports.html
@@ -9,3 +9,4 @@
 <link rel="import" href="bower_components/core-scaffold/core-scaffold.html"/>
 <link rel="import" href="bower_components/core-menu/core-menu.html"/>
 <link rel="import" href="bower_components/core-item/core-item.html"/>
+<link rel="import" href="bower_components/paper-toast/paper-toast.html"/>
