--- a/imports.html
+++ b/imports.html
@@ -10,3 +10,4 @@
 <link rel="import" href="bower_components/core-menu/core-menu.html"/>
 <link rel="import" href="bower_components/core-item/core-item.html"/>
 <link rel="import" href="bower_components/paper-toast/paper-toast.html"/>
+<link rel="import" href="bower_components/paper-spinner/paper-spinner.html"/>
