--- a/imports.html
+++ b/imports.html
@@ -11,3 +11,6 @@
 <link rel="import" href="bower_components/core-item/core-item.html"/>
 <link rel="import" href="bower_components/paper-toast/paper-toast.html"/>
 <link rel="import" href="bower_components/paper-spinner/paper-spinner.html"/>
+<link rel="import" href="bower_components/paper-dialog/paper-dialog.html"/>
+<link rel="import" href="bower_components/paper-dialog/paper-action-dialog.html"/>
+<link rel="import" href="bower_components/paper-dialog/paper-dialog-transition.html"/>
