--- a/imports.html
+++ b/imports.html
@@ -14,3 +14,5 @@
 <link rel="import" href="bower_components/paper-dialog/paper-dialog.html"/>
 <link rel="import" href="bower_components/paper-dialog/paper-action-dialog.html"/>
 <link rel="import" href="bower_components/paper-dialog/paper-dialog-transition.html"/>
+<link rel="import" href="bower_components/paper-input/paper-autogrow-textarea.html"/>
+<link rel="import" href="bower_components/core-image/core-image.html"/>
