Change icon of application

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
+    <link rel="shortcut icon" href="auction-logo-small.png" type="image/png">
 
     <!-- Polymer imports-->
     <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
