Add load spinner

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <link rel="stylesheet" href="css/app.css"/>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
 </head>
-<body fullbleed vertical layout unresolved id="applicationHost">
+<body fullbleed vertical layout unresolved id="applicationHost1">
 
+<div class="app-loader">
+    <paper-spinner active=""></paper-spinner>
+</div>
 
 <script src="lib/require/require.js" data-main="app/main"></script>
 </body>
