--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/app.css"/>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
 </head>
-<body fullbleed vertical layout unresolved id="applicationHost1">
+<body fullbleed vertical layout unresolved id="applicationHost">
 
 <div class="app-loader">
     <paper-spinner active=""></paper-spinner>
